# manga_manager

./: .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml  pytest.ini
.github/: copilot.md
.github/workflows/: ci.yml
convertor/: README.md  pyproject.toml
convertor/src/convertor/: __init__.py  cli.py  exit_codes.py  kcc_adapter.py  main.py  worker.py
convertor/tests/: conftest.py  test_cli_behavior.py  test_cli_error_paths.py  test_cli_executable_fallback.py  test_cover_injection.py  test_kcc_adapter.py  test_kcc_executable_fallback.py  test_kcc_fallback.py  test_kcc_integration.py  test_kcc_integration_real.py  test_kcc_settings.py  test_paths_and_adapter.py
editor/: README.md  pyproject.toml
editor/src/editor/: cli.py  editor.py  editor_full.py  epub_metadata.py  main.py
editor/tests/: conftest.py  test_chapter_titles.py  test_clear_and_file_support.py  test_cli.py  test_comprehensive.py  test_editor_full_unit.py  test_editor_import.py  test_epub_metadata.py  test_inject_and_dump.py  test_inject_language.py
metadatas/: boruto_bv.yaml  chapters_jjk.yaml  chapters_jjkm.yaml  chapters_zetman.yaml  fma.yaml  jjk.yaml  jjkm.yaml  mashle.yaml  packer_fma.json  packer_jjk.json  packer_jjkm.json  packer_mashle.json  packer_vagabond.json  packer_zetman.json  shangri.yaml  vagabond.yaml  vols_fma.csv  vols_jjk.csv  vols_jjkm.csv  vols_mashle.csv  vols_vagabond.csv  vols_zetman.csv  zetman.yaml
packer/: Makefile  README.md  TODOs.txt  __init__.py  main.py  pyproject.toml
packer/src/packer/: cli.py  config.py  core.py  exit_codes.py  main.py  testing.py  types_.py  types_deprecated.py  utils.py  worker.py
packer/tests/: __init__.py  conftest.py  helpers.py  test_batch.py  test_batch_file.py  test_cli_main.py  test_concurrency_dryrun.py  test_config_file.py  test_config_file_bad_json.py  test_config_path.py  test_core_doctest.py  test_core_regex.py  test_cover_copy.py  test_error_conditions.py  test_error_paths.py  test_extras.py  test_fma_pattern.py  test_integration_extraction.py  test_logging.py  test_missing_serie_errors.py  test_more_features.py  test_pattern_cli.py  test_serie_from_packer_json.py  test_utils.py  test_worker_unit.py
targets/: help.mk
